--- a/mshop/.project
+++ b/mshop/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mshop</name>
+	<name>mshop-01</name>
 	<comment></comment>
 	<projects>
 	</projects>
